Created enter section

--- a/index.html
+++ b/index.html
@@ -23,5 +23,28 @@
       </div>
       <i class="fa-solid fa-magnifying-glass nav-search"></i>
     </nav>
+    <main>
+      <div class="enter">
+        <div class="enter-text">
+          <h1>
+            “Життя в ім'я науки й України” <span
+              >(з нагоди 180-річчя із дня народження Івана Пулюя, видатного
+              фізика та електротехніка України)</span
+            >
+          </h1>
+          <p>
+            Іван Пулюя (1845-1918) - український та австро-угорський фізик та
+            електротехнік, організатор науки, громадський діяч. Відомий
+            піонерськими роботами з дослідження катодних променів
+          </p>
+        </div>
+        <img
+          src="./assets/img/enter.png"
+          alt="Іван Пулюя enter"
+          class="enter-img"
+        />
+      </div>
+      <div class="biography"><div class="biography-education"></div></div>
+    </main>
   </body>
 </html>
