Changed architecture. Created inventions section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/styles/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -51,7 +51,7 @@
           </p>
         </div>
         <img
-          src="./assets/img/enter.png"
+          src="src/assets/img/enter.png"
           alt="Іван Пулюя enter"
           class="enter-img"
         />
@@ -62,7 +62,7 @@
           <h3 id="biographyEducationTitle">Освіта</h3>
           <div class="biography-education-data">
             <img
-              src="assets/img/biography-education.png"
+              src="src/assets/img/biography-education.png"
               alt="Іван Пулюя biography education"
               class="biography-education-data-img"
             />
@@ -107,14 +107,49 @@
               </p>
             </div>
             <img
-              src="assets/img/biography-family.png"
+              src="src/assets/img/biography-family.png"
               alt="Іван Пулюя biography family"
               class="biography-family-data-img"
             />
           </div>
         </div>
       </div>
+      <div class="inventions">
+        <h2>Винаходи</h2>
+        <div class="inventions-data">
+          <p>
+            У 1880 році Пулюй виявив, що певні кристали, зокрема кварц, здатні
+            генерувати електричний заряд під дією механічного напруження. Цей
+            ефект мав велике значення для розвитку технологій ультразвукової
+            техніки, акустики, медичних діагностичних засобів та інших галузей.
+          </p>
+          <div style="display: flex; justify-content: space-between">
+            <div class="inventions-data-text">
+              <p>
+                Пулюй також вніс важливий внесок у розвиток рентгенівських
+                технологій. У 1896 році він опублікував статтю про відкриття
+                рентгенівських променів, які він назвав "рентгенівськими". Це
+                відкриття відкрило нову еру у медицині, дозволяючи лікарям
+                діагностувати та лікувати хвороби шляхом невідомого раніше
+                зображення внутрішніх органів людини.
+              </p>
+              <p>
+                Пулюй також працював над вдосконаленням інших технологій,
+                включаючи електричне освітлення та винахід першого електричного
+                підйомника для людей з обмеженими можливостями.
+              </p>
+            </div>
+            <div class="inventions-data-img">
+              <img
+                src="src/assets/img/inventions.png"
+                alt="inventions-data-img"
+              />
+              <span>Рука доньки дослідника Наталі (1896).</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
-    <script src="script.js"></script>
+    <script src="src/js/script.js"></script>
   </body>
 </html>
