Create scrolling to inventions title

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </ul>
           </div>
         </div>
-        <span class="nav-menu-element">Винаходи</span>
+        <span class="nav-menu-element" id="navInventions">Винаходи</span>
         <span class="nav-menu-element">Премії</span>
       </div>
       <i class="fa-solid fa-magnifying-glass nav-search"></i>
@@ -115,7 +115,7 @@
         </div>
       </div>
       <div class="inventions">
-        <h2>Винаходи</h2>
+        <h2 id="inventionsTitle">Винаходи</h2>
         <div class="inventions-data">
           <p>
             У 1880 році Пулюй виявив, що певні кристали, зокрема кварц, здатні
