Created awards section

--- a/index.html
+++ b/index.html
@@ -149,6 +149,56 @@
           </div>
         </div>
       </div>
+      <div class="awards">
+        <h2>Премії</h2>
+        <div class="awards-data">
+          <div class="awards-data-main">
+            <p>
+              Автор близько 50 наукових праць українською, німецькою,
+              англійською мовами.
+            </p>
+            <p>
+              У 1902 р. він заснував та очолив катедру електротехніки. З нагоди
+              100-літнього ювілею Німецької політехніки в Празі Пулюя
+              відзначили орденом Залізної корони ІІІ ступеня за його наукову та
+              викладацьку працю (1906). Він отримав також хрест ордена
+              Франца-Йосифа і високий титул Радника двору (1910).
+            </p>
+          </div>
+          <div class="awards-data-publication">
+            <h4>Публікації про катодні та Х-промен</h4>
+            <ul>
+              <li>
+                Strahlende Elektrodenmaterie // Wiener Berichte I. — 1880. —
+                81. — S.864—923; II. — 1881. — 83. — S.402—420; III. 1881. —
+                83. — S.693—708; IV. — 1882. — 85. — S.871—881.
+              </li>
+              <li>
+                Strahlende Elektrodenmaterie und der sogenannte
+                Aggregatzustand' — Wien; Verlag Carl Gerold Sohn, 1883.
+              </li>
+              <li>
+                Radiant Elektrode Matter and the so Called Fourth State.—
+                London: Physical Memoirs, 1889. — Vol. l, Pt.2. — P.233—331.
+              </li>
+              <li>
+                Über die Entstehung der Röntgen'schen Strahlen und ihre
+                photographische Wirkung // Wiener Berichte. — 1896. — Bd. 105. —
+                S. 228—238.
+              </li>
+              <li>
+                Nachtrag zur Abhandlung: Uber die Entstehung der Röntgen'schen
+                Strahlen und ihre photographische Wirkung // Wiener Berichte. —
+                1896. — Bd. 105. — S. 243—245.
+              </li>
+              <li>
+                Іван Пулюй. Збірник праць / за ред. В. Шендеровського. — Київ,
+                1996. — 712 с.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="src/js/script.js"></script>
   </body>
