--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
       </div>
     </main>
     <script type="module" src="src/js/functions.js"></script>
+    <script type="module" src="src/js/scroll.js"></script>
+
     <script type="module" src="src/js/script.js"></script>
   </body>
 </html>
