--- a/index.html
+++ b/index.html
@@ -211,9 +211,10 @@
         </div>
       </div>
     </main>
-    <script type="module" src="src/js/functions.js"></script>
-    <script type="module" src="src/js/scroll.js"></script>
+    <script src="src/js/functions.js"></script>
+    <script src="src/js/scroll.js"></script>
 
-    <script type="module" src="src/js/script.js"></script>
+    <!-- <script src="src/js/script.js"></script> -->
+    <script src="src/js/script.js"></script>
   </body>
 </html>
